# netifyd

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BUILD-env.sh-sample  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  Makefile.am  README.md  TODO.md  aclocal.m4  autogen.sh  bitbucket-pipelines.yml  cdpid.spec  cdpid.spec.in  configure.ac  libnetifyd.pc.in  netifyd.spec  netifyd.spec.in
.gitlab/issue_templates/: Bug.md  Feature.md
debian/: .gitignore  debian.changelog.in  debian.control.in  debian.rules.in  netifyd.dsc.in
deploy/: .gitignore  Makefile  Makefile.am  app-content-match.csv  app-custom-match.conf  app-host-match.csv  app-host-match.sed  cdpid.conf  cdpid.service  cdpid.tmpf  env.sh  exec-pre.sh  functions.sh  functions.sh.in  host-protocol.csv  install-edgeos.sh  netify-sink.conf  netifyd-debian.init  netifyd-sysv.init  netifyd.conf  netifyd.conf-clearos  netifyd.conf.in  netifyd.default  netifyd.init  netifyd.init.in  netifyd.service  netifyd.tmpf  watchdog.cron  watchdog.cron.in  watchdog.sh  watchdog.sh.in
deploy/buildroot/: .gitignore  Config.in  netifyd.mk.in
deploy/clearos/: exec-pre.sh  netifyd.conf  netifyd.init  netifyd.tmpf
deploy/debian/: .gitignore  Makefile.am  debian.changelog.in  debian.conffiles.in  debian.control.in  debian.init.in  debian.postinst.in  debian.rules.in  netifyd.default  netifyd.dsc.in  netifyd.init
deploy/edgeos/: .gitignore  Makefile.am  install.sh  netifyd.conf.in  watchdog-conf.sh.in  watchdog.cron.in
deploy/edgeos/netify_edgeos/: install.py  netify_edgeos.py  options.py  watchdog.py
deploy/freebsd/: .gitignore  Makefile-10x.in  Makefile-11x-debug.in  Makefile-11x.in  Makefile-12x.in  Makefile.in  pkg-install  pkg-plist
deploy/freebsd/files/: netifyd.in
deploy/openwrt/: Makefile.in
deploy/openwrt/files/: netifyd.config.in  netifyd.init  netifyd.init.in
deploy/pfsense/: INSTALL-pfsense-2.4.4-p3.md  Makefile.am  Makefile.in  pkg-descr  pkg-message  pkg-plist
deploy/pfsense/files/: INSTALL-pfSense-2.4.4-p3.md
deploy/pfsense/files/usr/local/pkg/: netify.xml
deploy/pfsense/files/usr/local/pkg/netify/: netify.inc  netify_defs.inc
deploy/pfsense/files/usr/local/pkg/shortcuts/: netify.inc
deploy/pfsense/files/usr/local/share/pfSense-pkg-netify/: info.xml
deploy/pfsense/files/usr/local/www/netify/: netify_provision.php  netify_status.php
deploy/pfsense/netify_pfsense/: options.py
deploy/systemd/: .gitignore  Makefile.am  env.sh  exec-pre.sh.in  netifyd.conf.in  netifyd.service.in
deploy/ubios/: .gitignore  Makefile.am  netifyd.conf.in  netifyd.default  netifyd.init.in
doc/: .gitignore  BUGS  BUGS.md  BUILD-buildroot.md  BUILD-centos6x.md  BUILD-centos7x.md  BUILD-freebsd.md  BUILD-openwrt.md  BUILD-openwrt.txt  BUILD-osc.md  Makefile.am  OVERVIEW.md  README-JSON-socket-example.md  TODO.md  json-socket-example.sh  json-socket-filter.jq  netifyd.8  netifyd.8.in  netifyd.conf-sample  netifyd.conf.5  netifyd.conf.5.in
include/: .gitignore  Makefile.am  cdpi-inotify.h  cdpi-json.h  cdpi-sha1.h  cdpi-thread.h  cdpi-util.h  cdpi.h  nd-base64.h  nd-capture.h  nd-conntrack.h  nd-detection.h  nd-dhc.h  nd-dns-cache.h  nd-fhc.h  nd-flow.h  nd-inotify.h  nd-json-config-type.txt.in  nd-json-object-type.txt.in  nd-json-response-code.txt.in  nd-json-result-code.txt.in  nd-json.h  nd-ndpi.h  nd-netlink.h  nd-plugin.h  nd-sha1.h  nd-signal.h  nd-sink.h  nd-socket.h  nd-thread.h  nd-upload.h  nd-util.h  netifyd.h
libs/: .gitignore
m4/: .gitignore  ax_cxx_compile_stdcxx_0x.m4  ax_cxx_compile_stdcxx_11.m4  ax_pkg_installdir.m4
openwrt/: Makefile.in
openwrt/net/netifyd/: Makefile.in
src/: .gitignore  Makefile.am  cdpi-inotify.cpp  cdpi-json.cpp  cdpi-sha1.c  cdpi-thread.cpp  cdpi-util.cpp  cdpid.cpp  nd-base64.cpp  nd-capture.cpp  nd-conntrack.cpp  nd-detection.cpp  nd-dhc.cpp  nd-dns-cache.cpp  nd-fhc.cpp  nd-flow.cpp  nd-inotify.cpp  nd-json.cpp  nd-ndpi.cpp  nd-netlink.cpp  nd-plugin.cpp  nd-sha1.c  nd-sink.cpp  nd-socket.cpp  nd-thread.cpp  nd-upload.cpp  nd-util.cpp  netifyd.cpp  ns-parse.c
tests/: Makefile.am  ndpi-pcap-files.txt  netifyd-inotify.sh  netifyd-test-pcap.conf  test-pcap-regression.sh  test-pcap-samples.sh
util/: .gitignore  Makefile.am  generate-json-include.sh  generate-json-include.sh.in  generate-protocol-csv.sh  generate-protocol-csv.sh.in  nd-content-match-export.cpp  nd-match-export.cpp  ndpi-dissector-protos.sh
